# brainfuck

./: .gitignore  CMakeLists.txt  README.md  _tmp_.bf  _tmp_.cpp  addition.bf  bca.bf  echo.bf  ex_valentin.bf  output.cpp  test.xbf
src/: main.cpp
